--- a/.github/workflows/helm-package.yml
+++ b/.github/workflows/helm-package.yml
@@ -54,9 +54,6 @@ jobs:
 
   package-chart:
 #  if: github.ref == 'refs/heads/main'
-    permissions:
-      packages: write
-      contents: read
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -79,4 +76,4 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_TOKEN: "${{ secrets.PACKAGE_TOKEN }}"
