--- a/.github/workflows/helm-package.yml
+++ b/.github/workflows/helm-package.yml
@@ -55,6 +55,9 @@ jobs:
   package-chart:
 #  if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     defaults:
       run:
         working-directory: charts
@@ -76,5 +79,5 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
-          CR_TOKEN: "${{ secrets.PACKAGE_TOKEN }}"
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
