--- a/.github/workflows/helm-package.yml
+++ b/.github/workflows/helm-package.yml
@@ -53,8 +53,11 @@ jobs:
         run: ct install --target-branch ${{ github.event.repository.default_branch }}
 
   package-chart:
-#  if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     defaults:
       run:
         working-directory: charts
