--- a/.github/workflows/helm-package.yml
+++ b/.github/workflows/helm-package.yml
@@ -79,5 +79,4 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
-          CR_TOKEN: "${{ secrets.PACKAGE_TOKEN }}"
-
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
