--- a/charts/cysl-backend/templates/api-route.yaml
+++ b/charts/cysl-backend/templates/api-route.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.gateway.enabled }}
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
@@ -14,3 +15,4 @@ spec:
     - name: {{ include "helm-chart.fullname" . }}
       kind: Service
       port: {{ .Values.service.port }}
+{{- endif }}
