--- a/charts/cysl-backend/values.yaml
+++ b/charts/cysl-backend/values.yaml
@@ -48,6 +48,25 @@ service:
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
   port: 80
 
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local 
+      paths:
+        - path: / 
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
+gateway:
+  enabled: true
+
 resources:
   limits:
     cpu: 100m
