fix syntax error

--- a/charts/cysl-backend/templates/api-route.yaml
+++ b/charts/cysl-backend/templates/api-route.yaml
@@ -15,4 +15,4 @@ spec:
     - name: {{ include "helm-chart.fullname" . }}
       kind: Service
       port: {{ .Values.service.port }}
-{{- endif }}
+{{- end }}
