--- a/charts/cysl-api/values.yaml
+++ b/charts/cysl-api/values.yaml
@@ -90,17 +90,17 @@ autoscaling:
   targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
+volumes:
+ - name: envFile
+   secret:
+     secretName: cysl-envfile
+     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
+volumeMounts: 
+ - name: envFile
+   mountPath: "/opt/cysl/api"
+   readOnly: true
 
 nodeSelector: {}
 
