--- a/charts/cysl-api/values.yaml
+++ b/charts/cysl-api/values.yaml
@@ -10,7 +10,7 @@ imagePullSecrets: []
 # This is to override the chart name.
 nameOverride: ""
 fullnameOverride: ""
-env_file: "/opt/cysl/api/.env"
+envFile: "/opt/cysl/api/.env"
 
 #This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
 serviceAccount:
