--- a/charts/cysl-api/templates/ingress.yaml
+++ b/charts/cysl-api/templates/ingress.yaml
@@ -40,7 +40,7 @@ spec:
   selector:
     name: cysl-ingress
   type: LoadBalancer
-  loadBalancerIP: 192.168.1.200
+  loadBalancerIP: {{ .Values.externalIP }}
   ports:
     - name: http
       protocol: TCP
