attempt to fix ingress

--- a/charts/cysl-api/values.yaml
+++ b/charts/cysl-api/values.yaml
@@ -113,6 +113,7 @@ tolerations: []
 
 affinity: {}
 
-domainName: cysl.space
-
-externalIP: 192.168.1.204
+loadBalancer:
+  domainName: cysl.space
+  externalIP: 192.168.1.204
+  clusterIssuer: lets-encrypt-staging
