--- a/charts/cysl-api/templates/ingress.yaml
+++ b/charts/cysl-api/templates/ingress.yaml
@@ -8,10 +8,9 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
-#    cert-manager.io/cluster-issuer: lets-encrypt-staging
 spec:
   rules:
-  - host: {{ .Values.domainName }}
+  - host: {{ .Values.loadBalancer.domainName }}
     http:
       paths:
       - pathType: Prefix
@@ -21,8 +20,10 @@ spec:
             name: cysl-frontend
             port:
               number: 5000
-  - host: "api.{{ .Values.domainName }}"
+  
+  - host: "api.{{ .Values.loadBalancer.domainName }}"
     http:
+      paths:  # This was missing!
       - pathType: Prefix
         path: "/(.*)"
         backend:
@@ -30,7 +31,6 @@ spec:
             name: {{ include "helm-chart.fullname" . }}
             port:
               number: 8000
-
 ---
 apiVersion: v1
 kind: Service
@@ -40,7 +40,7 @@ spec:
   selector:
     name: cysl-ingress
   type: LoadBalancer
-  loadBalancerIP: {{ .Values.externalIP }}
+  loadBalancerIP: {{ .Values.loadBalancer.externalIP }}
   ports:
     - name: http
       protocol: TCP
@@ -50,4 +50,3 @@ spec:
       protocol: TCP
       port: 443
       targetPort: 443
-
