--- a/charts/cysl-api/templates/ingress.yaml
+++ b/charts/cysl-api/templates/ingress.yaml
@@ -10,8 +10,8 @@ metadata:
     nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
 spec:
   rules:
-  - host: {{ .Values.loadBalancer.domainName }}
-    http:
+#  - host: {{ .Values.loadBalancer.domainName }}
+  - http:
       paths:
       - pathType: Prefix
         path: "/(.*)"
@@ -21,8 +21,8 @@ spec:
             port:
               number: 5000
   
-  - host: "api.{{ .Values.loadBalancer.domainName }}"
-    http:
+#  - host: "api.{{ .Values.loadBalancer.domainName }}"
+  - http:
       paths:
       - pathType: Prefix
         path: "/(.*)"
@@ -31,21 +31,3 @@ spec:
             name: {{ include "helm-chart.fullname" . }}
             port:
               number: 8000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: ingress
-spec:
-  selector:
-    name: cysl-ingress
-  type: LoadBalancer
-  ports:
-    - name: http
-      protocol: TCP
-      port: 80
-      targetPort: 80
-    - name: https
-      protocol: TCP
-      port: 443
-      targetPort: 443
