--- a/charts/cysl-api/templates/ingress.yaml
+++ b/charts/cysl-api/templates/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: cysl-ingress
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx-public
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
 spec:
@@ -25,7 +25,7 @@ spec:
   - http:
       paths:
       - pathType: Prefix
-        path: "/(.*)"
+        path: "/api(/|$)(.*)"
         backend:
           service:
             name: {{ include "helm-chart.fullname" . }}
