--- a/charts/cysl-api/templates/ingress.yaml
+++ b/charts/cysl-api/templates/ingress.yaml
@@ -25,7 +25,7 @@ spec:
       paths:
       # API paths
       - pathType: Prefix
-        path: "/api/"
+        path: "/"
         backend:
           service:
             name: cysl-api
