--- a/charts/cysl-api/templates/ingress.yaml
+++ b/charts/cysl-api/templates/ingress.yaml
@@ -34,5 +34,5 @@ spec:
               number: 8000
   tls:
   - hosts:
-    - api.cysl.space
+    - cysl.example.com
     secretName: cysl-server-tls
