--- a/charts/cysl-frontend/values.yaml
+++ b/charts/cysl-frontend/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: ghcr.io/coastalyouthsoccer/cysl-frontend
   pullPolicy: Always
-  tag: "dockerize-frontend"
+  tag: ""
 
 # This is for the secretes for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
