--- a/charts/cysl-api/Chart.yaml
+++ b/charts/cysl-api/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: cysl-api
-description: A Helm chart for Kubernetes
+description: A Helm chart for CYSL Backend
 
 type: application
 
