move to shared variables

--- a/charts/cysl-api/templates/ingress.yaml
+++ b/charts/cysl-api/templates/ingress.yaml
@@ -22,7 +22,7 @@ metadata:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
 spec:
   rules:
-  - host: api.cysl.space
+  - host: "api.{{ .Value.global.domainName }}"
     http:
       paths:
       # API paths
