add more values

--- a/charts/cysl-api/templates/ingress.yaml
+++ b/charts/cysl-api/templates/ingress.yaml
@@ -32,7 +32,7 @@ spec:
           service:
             name: cysl-api
             port:
-              number: 8000
+              number: {{ .Values.service.port }}
   tls:
   - hosts:
     - "api.{{ .Values.global.domainName }}"
