--- a/charts/cysl-api/templates/service.yaml
+++ b/charts/cysl-api/templates/service.yaml
@@ -15,5 +15,5 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: 8000
-      targetPort: 8000
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
