add vault certificate

--- a/charts/cysl-frontend/templates/ingress.yaml
+++ b/charts/cysl-frontend/templates/ingress.yaml
@@ -27,4 +27,4 @@ spec:
   tls:
   - hosts:
     - {{ .Values.global.domainName }}
-    secretName: cysl-server-tls
+    secretName: cysl-frontend-tls
