--- a/templates/vault/certificate.yaml
+++ b/templates/vault/certificate.yaml
@@ -4,45 +4,39 @@ metadata:
   name: vault-tls
   namespace: vault
 spec:
-  secretName: vault-ha-tls
+  secretName: vault-tls-temp
   issuerRef:
     name: selfsigned-issuer
     kind: ClusterIssuer
   commonName: vault.vault.svc.cluster.local
   dnsNames:
-    # Internal service names
     - vault
     - vault.vault
     - vault.vault.svc
     - vault.vault.svc.cluster.local
     - vault-0.vault-internal
-    - vault-0.vault-internal.vault
-    - vault-0.vault-internal.vault.svc
     - vault-0.vault-internal.vault.svc.cluster.local
     - vault-1.vault-internal
-    - vault-1.vault-internal.vault
-    - vault-1.vault-internal.vault.svc
     - vault-1.vault-internal.vault.svc.cluster.local
-    - vault-active
-    - vault-active.vault
-    - vault-active.vault.svc
     - vault-active.vault.svc.cluster.local
-    - vault-standby
-    - vault-standby.vault
-    - vault-standby.vault.svc
     - vault-standby.vault.svc.cluster.local
-    # External hostname (your ingress)
     - vault.example.com
-    # Add your actual domain if different
     - "*.vault.svc.cluster.local"
-  ipAddresses:
-    - 127.0.0.1
+  privateKey:
+    algorithm: RSA
+    size: 2048
   usages:
     - digital signature
     - key encipherment
     - server auth
     - client auth
-  # Store as vault.crt, vault.key, vault.ca
-  privateKey:
-    algorithm: RSA
-    size: 2048
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: vault-ha-tls
+  namespace: vault
+  annotations:
+    # This will be populated by a Job or manually
+    reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+type: Opaque
