--- a/templates/vault/cert-to-secret.yaml
+++ b/templates/vault/cert-to-secret.yaml
@@ -22,23 +22,29 @@ spec:
             sleep 5
           done
           
-          # Extract and recreate with correct key names
+          echo "Secret found, converting..."
+          
+          # Delete old secret if exists
+          kubectl delete secret vault-ha-tls -n vault --ignore-not-found=true
+          
+          # Extract and transform using correct jq syntax
           kubectl get secret vault-tls-temp -n vault -o json | \
-          jq '.data["tls.crt"] as $crt | .data["tls.key"] as $key | .data["ca.crt"] as $ca |
-          {
-            "apiVersion": "v1",
-            "kind": "Secret",
-            "metadata": {
-              "name": "vault-ha-tls",
-              "namespace": "vault"
+          jq '{
+            apiVersion: "v1",
+            kind: "Secret",
+            metadata: {
+              name: "vault-ha-tls",
+              namespace: "vault"
             },
-            "type": "Opaque",
-            "data": {
-              "vault.crt": $crt,
-              "vault.key": $key,
-              "vault.ca": $ca
+            type: "Opaque",
+            data: {
+              "vault.crt": .data["tls.crt"],
+              "vault.key": .data["tls.key"],
+              "vault.ca": .data["ca.crt"]
             }
           }' | kubectl apply -f -
+          
+          echo "Secret created successfully!"
       restartPolicy: OnFailure
 ---
 apiVersion: v1
