remove secret creaton

--- a/templates/vault/cert-to-secret.yaml
+++ b/templates/vault/cert-to-secret.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: vault
   annotations:
     argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
 spec:
   template:
     spec:
@@ -16,11 +17,16 @@ spec:
         - /bin/sh
         - -c
         - |
-          # Wait for cert-manager to create the certificate
-          until kubectl get secret vault-tls-temp -n vault; do
-            echo "Waiting for vault-tls-temp secret..."
-            sleep 5
-          done
+          echo "PostSync: Converting certificate secret..."
+          
+          # Certificate should exist by now, but let's wait a bit to be sure
+          sleep 10
+          
+          if ! kubectl get secret vault-tls-temp -n vault &>/dev/null; then
+            echo "ERROR: vault-tls-temp secret not found"
+            kubectl get secrets -n vault
+            exit 1
+          fi
           
           echo "Secret found, converting..."
           
