--- a/templates/vault/certificate.yaml
+++ b/templates/vault/certificate.yaml
@@ -1,3 +1,11 @@
+apiVersion: traefik.io/v1alpha1
+kind: ServersTransport
+metadata:
+  name: vault-transport
+  namespace: vault
+spec:
+  insecureSkipVerify: true  # Skip verification of Vault's self-signed cert
+---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
