--- a/templates/vault/certificate.yaml
+++ b/templates/vault/certificate.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: ServersTransport
 metadata:
   name: vault-transport
-  namespace: traefik
+  namespace: vault
 spec:
   serverName: vault.vault.svc.cluster.local  # SNI name
   insecureSkipVerify: true
