--- a/templates/vault/certificate.yaml
+++ b/templates/vault/certificate.yaml
@@ -5,11 +5,10 @@ metadata:
   namespace: vault
 spec:
   serverName: vault.vault.svc.cluster.local  # SNI name
-  insecureSkipVerify: true
-  rootCAsSecrets:
-    - vault-ha-tls  # Reference to the secret containing vault.ca
   certificatesSecrets:
-    - vault-ha-tls  # For mutual TLS if needed
+    - vault-client-tls
+  rootCAsSecrets:
+    - vault-ca
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
