--- a/templates/vault/certificate.yaml
+++ b/templates/vault/certificate.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: vault
 spec:
   serverName: vault.vault.svc.cluster.local  # SNI name
-  insecureSkipVerify: false
+  insecureSkipVerify: true
   rootCAsSecrets:
     - vault-ha-tls
 ---
