--- a/templates/vault/ingress.yaml
+++ b/templates/vault/ingress.yaml
@@ -18,3 +18,19 @@ spec:
     regex: "^https://vault.example.com/$"
     replacement: "https://vault.example.com/ui/"
     permanent: false
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRouteTCP
+metadata:
+  name: vault-tcp
+  namespace: vault
+spec:
+  entryPoints:
+    - websecure
+  routes:
+  - match: HostSNI(`vault.example.com`)
+    services:
+    - name: vault
+      port: 8200
+  tls:
+    passthrough: true
