--- a/templates/vault/vault-injector-cert.yaml
+++ b/templates/vault/vault-injector-cert.yaml
@@ -5,17 +5,23 @@ metadata:
   namespace: vault
 spec:
   secretName: vault-agent-injector-tls
-  duration: 8760h # 1 year
-  renewBefore: 720h # 30 days
+  duration: 8760h
+  renewBefore: 720h
   issuerRef:
-    name: selfsigned-issuer
-    kind: Issuer
+    name: selfsigned-issuer  # Use your ClusterIssuer
+    kind: ClusterIssuer
   commonName: vault-agent-injector-svc.vault.svc
   dnsNames:
     - vault-agent-injector-svc
     - vault-agent-injector-svc.vault
     - vault-agent-injector-svc.vault.svc
     - vault-agent-injector-svc.vault.svc.cluster.local
+  ipAddresses:
+    - 127.0.0.1
+    - "::1"
+  privateKey:
+    algorithm: RSA
+    size: 2048
   usages:
     - digital signature
     - key encipherment
