move to csi vault

--- a/charts/cysl-api/values.yaml
+++ b/charts/cysl-api/values.yaml
@@ -108,9 +108,9 @@ global:
   environment: production
   clusterIssuer: lets-encrypt-staging
 
-vault:
+secretProvider:
   inject: true
-  secretName: kv/data/cysl/backend-env
+  secretPath: kv/data/cysl/backend-env
   role: cysl-role
-  envFile: .env
-  filePath: /opt/cysl/api
+  objectName: backend-env
+  secretKey: data
