remove ca cert path

--- a/charts/cysl-api/templates/secret-provider.yaml
+++ b/charts/cysl-api/templates/secret-provider.yaml
@@ -7,7 +7,7 @@ spec:
   provider: vault
   parameters:
     vaultAddress: "http://vault.default:8200"
-    vaultCACertPath: "/vault/tls/ca.crt"
+#    vaultCACertPath: "/vault/tls/ca.crt"
     roleName: {{ .Values.secretProvider.role }}
     objects: |
       - objectName: "{{ .Values.secretProvider.objectName }}"
