remove ca cert path

--- a/charts/cysl-api/templates/secret-provider.yaml
+++ b/charts/cysl-api/templates/secret-provider.yaml
@@ -7,11 +7,10 @@ spec:
   provider: vault
   parameters:
     vaultAddress: "http://vault.default:8200"
-#    vaultCACertPath: "/vault/tls/ca.crt"
     roleName: {{ .Values.secretProvider.role }}
     objects: |
       - objectName: "{{ .Values.secretProvider.objectName }}"
-        secretPath: "{{ .Values.secretProvider.secretName }}"
+        secretPath: "{{ .Values.secretProvider.secretPath }}"
         secretKey: "{{ .Values.secretProvider.secretKey }}"
         method: "GET"
 {{- end }}
