change vault address

--- a/charts/cysl-api/templates/secret-provider.yaml
+++ b/charts/cysl-api/templates/secret-provider.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider: vault
   parameters:
-    vaultAddress: "http://vault.default:8200"
+    vaultAddress: {{ .Values.secretProvider.vaultAddress }}
     roleName: {{ .Values.secretProvider.role }}
     objects: |
       - objectName: "{{ .Values.secretProvider.objectName }}"
