--- a/charts/cysl-api/templates/secret-provider.yaml
+++ b/charts/cysl-api/templates/secret-provider.yaml
@@ -8,6 +8,8 @@ spec:
   parameters:
     vaultAddress: {{ .Values.secretProvider.vaultAddress }}
     roleName: {{ .Values.secretProvider.role }}
+    vaultKubernetesMountPath: "kubernetes"
+    vaultSkipTLSVerify: "true"
     objects: |
       - objectName: "{{ .Values.secretProvider.objectName }}"
         secretPath: "{{ .Values.secretProvider.secretPath }}"
