attempt to mount as file

--- a/charts/cysl-api/values.yaml
+++ b/charts/cysl-api/values.yaml
@@ -110,6 +110,7 @@ volumes:
 volumeMounts: 
   - name: env-file
     mountPath: /opt/cysl/api/.env
+    subPath: backend-env  # The objectName from SecretProviderClass
     readOnly: true
 
 nodeSelector: {}
