--- a/charts/cysl-api/templates/deployment.yaml
+++ b/charts/cysl-api/templates/deployment.yaml
@@ -30,6 +30,85 @@ spec:
       serviceAccountName: {{ include "helm-chart.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- if .Values.secretProvider.enabled -}}
+      initContainers:
+        - name: prepare-env-file
+          image: busybox:latest
+          command:
+            - sh
+            - -c
+            - |
+              set -e
+              
+              echo "=== Preparing .env file from Vault secrets ==="
+              
+              # Wait for CSI to mount secrets
+              echo "Waiting for secrets to be available..."
+              max_wait=60
+              wait_time=0
+              
+              while [ $wait_time -lt $max_wait ]; do
+                if [ -d /mnt/secrets-store ] && [ "$(ls -A /mnt/secrets-store 2>/dev/null)" ]; then
+                  echo "✓ Secrets directory found and not empty"
+                  break
+                fi
+                wait_time=$((wait_time + 2))
+                echo "  Waiting... (${wait_time}s/${max_wait}s)"
+                sleep 2
+              done
+              
+              if [ ! -d /mnt/secrets-store ] || [ ! "$(ls -A /mnt/secrets-store)" ]; then
+                echo "✗ ERROR: Secrets not mounted after ${max_wait}s"
+                exit 1
+              fi
+              
+              # List available secrets
+              echo ""
+              echo "Available secrets:"
+              ls -la /mnt/secrets-store/
+              echo ""
+              
+              # Create .env file from secrets
+              echo "Creating .env file..."
+              > /opt/cysl/api/.env  # Create empty file first
+              
+              for secret_file in /mnt/secrets-store/*; do
+                if [ -f "$secret_file" ]; then
+                  key=$(basename "$secret_file")
+                  value=$(cat "$secret_file")
+                  echo "${key}=${value}" >> /opt/cysl/api/.env
+                  echo "  Added: ${key}"
+                fi
+              done
+              
+              # Verify file was created
+              if [ ! -f /opt/cysl/api/.env ]; then
+                echo "✗ ERROR: Failed to create .env file"
+                exit 1
+              fi
+              
+              # Set permissions
+              chmod 644 /opt/cysl/api/.env
+              
+              # Show result
+              echo ""
+              echo "✓ .env file created successfully:"
+              echo "=================================="
+              cat /opt/cysl/api/.env
+              echo "=================================="
+              echo ""
+              echo "File info:"
+              ls -lh /opt/cysl/api/.env
+          volumeMounts:
+            - name: secrets-store-inline
+              mountPath: /mnt/secrets-store
+              readOnly: true
+            - name: vault-ca
+              mountPath: /vault/tls
+              readOnly: true
+            - name: env-file
+              mountPath: /opt/cysl/api
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
