--- a/charts/cysl-api/templates/secret-provider.yaml
+++ b/charts/cysl-api/templates/secret-provider.yaml
@@ -2,7 +2,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: vault-cysl-envfile
+  name: {{ .Values.secretProvider.name }}
 spec:
   provider: vault
   parameters:
@@ -11,7 +11,17 @@ spec:
     vaultKubernetesMountPath: "kubernetes"
     vaultSkipTLSVerify: "true"
     objects: |
-      - objectName: "{{ .Values.secretProvider.objectName }}"
-        secretPath: "{{ .Values.secretProvider.secretPath }}"
-        method: "GET"
+      {{- range .Values.secretProvider.secrets }}
+      - objectName: "{{ . }}"
+        secretPath: "{{ $.Values.secretProvider.secretPath }}"
+        secretKey: "{{ . }}"
+      {{- end }}
+  secretObjects:
+  - secretName: {{ .Values.secretProvider.secretName }}
+    type: Opaque
+    data:
+    {{- range .Values.secretProvider.secrets }}
+    - objectName: "{{ . }}"
+      key: {{ . }}
+    {{- end }}
 {{- end }}
