get variable names

--- a/charts/cysl-api/values.yaml
+++ b/charts/cysl-api/values.yaml
@@ -118,12 +118,19 @@ secretProvider:
   vaultAddress: https://vault.vault.svc:8200
   class: vault-cysl-envfile
   secrets:
-    - DATABASE_URL
-    - API_KEY
-    - DEBUG
-    - LOG_LEVEL
-    - DATABASE_POOL_SIZE
+    - ASSIGNR_CLIENT_ID
+    - ASSIGNR_CLIENT_SECRET
+    - AUTH0_API_AUDIENCE
     - AUTH0_DOMAIN
-    - AUTH0_CLIENT_ID
-    - AUTH0_CLIENT_SECRET
-    
+    - AUTH0_ISSUER
+    - CELERY_DATABASE_URL
+    - DATABASE_URL
+    - DB_ENCRYPTION_KEY
+    - HMAC_SECRET
+    - HTTP_ORIGINS
+    - MANAGEMENT_AUTH0_CLIENT_ID
+    - MANAGEMENT_AUTH0_CLIENT_SECRET
+    - MANAGEMENT_AUTH0_DOMAIN
+    - OTEL_EXPORTER_OLTP_ENDPOINT
+    - OTEL_GRAFANA_TOKEN
+    - OTEL_INSECURE
