--- a/charts/cysl-frontend/templates/ingress.yaml
+++ b/charts/cysl-frontend/templates/ingress.yaml
@@ -1,14 +1,25 @@
+{{- if .Values.ingress.enabled }}
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: strip-api-prefix
+spec:
+  stripPrefix:
+    prefixes:
+      - /api
+
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: cysl-frontend-ingress
+  name: cysl-ingress
   labels:
-    app: cysl-frontend-ingress
+    app: cysl-ingress
   annotations:
+    traefik.ingress.kubernetes.io/router.middlewares: {{ .Release.Namespace }}-cysl-server-headers@kubernetescrd,{{ .Release.Namespace }}-strip-api-prefix@kubernetescrd
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
     cert-manager.io/cluster-issuer: selfsigned-issuer
-    traefik.ingress.kubernetes.io/router.middlewares: cysl-cysl-server-headers@kubernetescrd
     argocd.argoproj.io/sync-options: "Validate=false"
     argocd.argoproj.io/compare-options: IgnoreExtraneous
 spec:
@@ -16,7 +27,13 @@ spec:
   - host: {{ .Values.global.domainName }}
     http:
       paths:
-      # API paths
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: cysl-backend
+            port:
+              number: {{ .Values.api.port }}
       - pathType: Prefix
         path: "/"
         backend:
@@ -28,3 +45,4 @@ spec:
   - hosts:
     - {{ .Values.global.domainName }}
     secretName: cysl-frontend-tls
+{{- end }}
