--- a/charts/cysl-frontend/values.yaml
+++ b/charts/cysl-frontend/values.yaml
@@ -46,24 +46,11 @@ service:
   port: 8000
   targetPort: 80
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local 
-      paths:
-        - path: / 
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+api:
+  port: 8000
 
-gateway:
-  enabled: false
+ingress:
+  enabled: true
 
 resources:
   limits:
